fixing vertical overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ a {
 	position: relative;
 	display: inline-block;
 	margin: 10px;
-	overflow: auto;
 }
 
 .poster img {
@@ -64,7 +63,6 @@ a {
 .poster>.imgBackdrop {
 	z-index: -1;
 	background: #000;
-	overflow: auto;
 }
 
 .posterBody {
